--- a/my_template/templates/pages/executive_summary.html
+++ b/my_template/templates/pages/executive_summary.html
@@ -6,8 +6,8 @@
 {% endblock title %}
 
 {% block content %}
-<div class="container-fluid mt-4">
-    <h2 class="text-center">Executive Summary</h2>
+<div class="container-fluid">
+    <h2 class="text-center mb-3">Executive Summary</h2>
 
     <!-- Summary Cards -->
     <div class="row text-center">
@@ -15,7 +15,7 @@
         
             <div class="col-md-4 ct">
                 <div class="card text-white p-2 mb-0 ct2">
-                    <h4 class="text-uppercase">{{ category|title }} Status</h4>
+                    <h4 class="text-uppercase mb-0">{{ category|title }} Status</h4>
                 </div>
                 <div class="card p-3 shadow ">
                     
