--- a/my_template/templates/partials/lot_search_blocks.html
+++ b/my_template/templates/partials/lot_search_blocks.html
@@ -1,8 +1,8 @@
 {% load static %}
-<div class="row">
+
     <!-- Each card with icons -->
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">Topic</p>
@@ -14,8 +14,8 @@
       </div>
     </div>
   
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">Special Focus</p>
@@ -26,8 +26,8 @@
       </div>
     </div>
   
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">Project Group</p>
@@ -38,8 +38,8 @@
       </div>
     </div>
   
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">Lot Status</p>
@@ -50,8 +50,8 @@
       </div>
     </div>
   
-    <div class="col-md-6">
-      <div class="card radius-10">
+    <div class="col-md-6 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">Project Name</p>
@@ -62,8 +62,8 @@
       </div>
     </div>
   
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">Factory</p>
@@ -74,8 +74,8 @@
       </div>
     </div>
   
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">BU</p>
@@ -86,8 +86,8 @@
       </div>
     </div>
   
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">Department</p>
@@ -98,8 +98,8 @@
       </div>
     </div>
   
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">Shipment</p>
@@ -110,8 +110,8 @@
       </div>
     </div>
   
-    <div class="col-md-6">
-      <div class="card radius-10">
+    <div class="col-md-6 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">Requestor</p>
@@ -122,8 +122,8 @@
       </div>
     </div>
   
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">Start Date</p>
@@ -134,8 +134,8 @@
       </div>
     </div>
   
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">End Date</p>
@@ -146,8 +146,8 @@
       </div>
     </div>
   
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">Total Lot Turns</p>
@@ -158,8 +158,8 @@
       </div>
     </div>
   
-    <div class="col-md-3">
-      <div class="card radius-10">
+    <div class="col-md-3 mb-3">
+      <div class="card radius-10 h-100 ">
         <div class="card-body d-flex justify-content-between align-items-center">
           <div>
             <p class="mb-0 text-secondary">3400 EUV in Hr's</p>
@@ -171,7 +171,7 @@
     </div>
   
     <div class="col-md-12">
-      <div class="card radius-10">
+      <div class="card radius-10 h-100 ">
         <div class="card-body">
           <h6 class="text-center text-secondary mb-4">Project Support Time in Hr's</h6>
           <div class="flow-container d-flex justify-content-around">
@@ -184,5 +184,5 @@
         </div>
       </div>
     </div>
-  </div>
+ 
   
