--- a/my_template/templates/pages/currentfy.html
+++ b/my_template/templates/pages/currentfy.html
@@ -7,8 +7,8 @@
 {% endblock title %}
 
 {% block content %}
-<div class="container-fluid mt-4">
-  <h2 class="text-center">Current FY Summary</h2>
+<div class="container-fluid ">
+  <h2 class="text-center mb-3">Current FY Summary</h2>
 
   <div class="row">
     <!-- Filter Section -->
