--- a/my_template/templates/pages/lot_status.html
+++ b/my_template/templates/pages/lot_status.html
@@ -14,7 +14,7 @@
     <!-- Factory Count Cards -->
     <div class="row g-3 mb-4">
         {% for factory, count in factory_counts.items %}
-        <div class="col-md-3 col-lg-2">
+        <div class="col-md-2 col-lg-1">
             <div class="card border-0 shadow-sm hover-shadow factory-card cursor-pointer" data-factory="{{ factory }}">
                 <div class="card-body text-center">
                     <h4 class="text-info mb-0 fw-bold">{{ count }}</h4>
@@ -30,7 +30,7 @@
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-hover table-bordered align-middle text-center" id="lot-status-table">
-                    <thead class="table-dark sticky-top">
+                    <thead class="bg-p sticky-top">
                         <tr>
                             <th>Owner</th>
                             <th>Factory</th>
