--- a/my_template/templates/pages/year.html
+++ b/my_template/templates/pages/year.html
@@ -26,7 +26,7 @@
                                 {% endfor %}
                                 <hr>
                                 <h5>Year</h5>
-                        {% for year in unique_years %}
+                        {% for year in unique_years reversed %}
                             <div class="form-check mb-1">
                                 <input class="form-check-input" type="radio" name="chart_years" id="chart_year_{{ forloop.counter }}" value="{{ year.year }}"
                                     {% if selected_years_chart and year.year|stringformat:"s" in selected_years_chart %}checked{% endif %}
@@ -53,7 +53,7 @@
                                             {% for wbs in unique_wbs %}
                                                 <th>{{ wbs }}</th>  <!-- Display WBS names -->
                                             {% endfor %}
-                                            <th>Total Lot Turns</th>  <!-- Display year total -->
+                                            <th>Total </th>  <!-- Display year total -->
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -93,7 +93,7 @@
                                             {% for wbs in unique_wbs %}
                                                 <th>{{ wbs }}</th>  <!-- Display WBS names -->
                                             {% endfor %}
-                                            <th>Total EUV3400</th>  <!-- Display year total -->
+                                            <th>Total </th>  <!-- Display year total -->
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -133,7 +133,7 @@
                                             {% for wbs in unique_wbs %}
                                                 <th>{{ wbs }}</th>
                                             {% endfor %}
-                                            <th>Total EXE_5000</th>
+                                            <th>Total </th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -251,11 +251,11 @@
                 var options = {
                     series: [
                     {
-                        name: "Cumulative Lot Turns budget",
+                        name: "Cumul Lot Turns budget",
                         data: {{ blue_line_values|safe }} || []
                     },
                     {
-                        name: 'Cumulative Lot Turns',
+                        name: 'Cumul Actual Lot Turns',
                         data: {{ cumulative_data|safe }}
                     }
                     ],
@@ -307,7 +307,7 @@
                 }
             },
                     title: {
-                    text: 'Cumulative Lot Turns',
+                    text: 'Cumulative Lot Turns Usage v/s Budget',
                     align: 'left'
                     },
                     
@@ -353,11 +353,11 @@
                 var options = {
                     series: [
                         {
-                            name: "Cumulative EXE5000 Budget",
+                            name: "Cumul EXE5000 Budget",
                             data: {{ blue_line_values3|safe }} || []
                         },
                         {
-                            name: "Cumulative EXE5000",
+                            name: "Cumul Actual EXE5000",
                             data: {{ cumulative_data3|safe }} || []
                         }
                     ],
@@ -405,7 +405,7 @@
                         }
                     },
                     title: {
-                        text: 'Cumulative EXE5000 Usage',
+                        text: 'Cumulative EXE5000 Usage v/s Budget',
                         align: 'left'
                     },
                     xaxis: {
@@ -656,7 +656,7 @@
                     tooltip: {
                         y: {
                             formatter: function (val) {
-                                return val.toFixed(2) + ' lot_turns';
+                                return val.toFixed(2) ;
                             }
                         }
                     },
@@ -785,7 +785,7 @@
                     tooltip: {
                         y: {
                             formatter: function (val) {
-                                return val.toFixed(2) + ' lot_turns';
+                                return val.toFixed(2) ;
                             }
                         }
                     },
@@ -873,7 +873,7 @@
                 }
             },
                     title: {
-                    text: 'Wafer Consumption Usage verses Trend',
+                    text: 'Wafer Consumption Usage v/s Trend',
                     align: 'left'
                     },
                     
@@ -1034,7 +1034,7 @@
                     },
                     yaxis: {
                         title: {
-                            text: 'EUV3400'
+                            text: 'EUV3400 (Hours)'
                         },
                         labels: {
                         formatter: function (val) {
@@ -1045,7 +1045,7 @@
                     tooltip: {
                         y: {
                             formatter: function (val) {
-                                return val.toFixed(2) + ' EUV_3400';
+                                return val.toFixed(2) + ' hrs';
                             }
                         }
                     },
@@ -1074,11 +1074,11 @@
                 var options = {
                     series: [
                     {
-                        name: "Cumul_Budget_3400",
+                        name: "Cumul EUV3400 Budget",
                         data: {{ blue_line_values2|safe }} || []
                     },
                     {
-                        name: 'Cumul_Actual_3400',
+                        name: 'Cumul Actual EUV3400',
                         data: {{ cumulative_data2|safe }}
                     }
                     ],
@@ -1129,7 +1129,7 @@
                 }
             },
                     title: {
-                    text: 'NXE3400 Usage verses Budget',
+                    text: 'Cummulative EUV3400 Usage v/s Budget',
                     align: 'left'
                     },
                     
@@ -1149,7 +1149,7 @@
                     },
                     yaxis: {
                     title: {
-                        text: 'EUV Tool Tim in Hrs'
+                        text: 'EUV_3400 Hours'
                     },
                     labels: {
                         formatter: function (val) {
@@ -1172,7 +1172,7 @@
                     chart.render();
             </script>
             {% else %}
-            <p class="mt-4">Please select a valid WBS and Year(s) for the chart.</p>
+            <p class="mt-4 text-danger">Please select a valid WBS and Year(s) for the chart.</p>
             {% endif %}
         
         
