--- a/my_template/templates/partials/lot_search_data_blocks.html
+++ b/my_template/templates/partials/lot_search_data_blocks.html
@@ -2,8 +2,8 @@
 {% if combined_data %}
 <div class="row">
 
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">Topic</p>
@@ -13,8 +13,8 @@
       </div>
     </div>
   </div>
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">Special Focus</p>
@@ -24,8 +24,8 @@
       </div>
     </div>
   </div>
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">Project Group</p>
@@ -35,8 +35,8 @@
       </div>
     </div>
   </div>
-  <div class="col-md-6">
-    <div class="card radius-10">
+  <div class="col-md-6 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">Project Name</p>
@@ -47,8 +47,8 @@
     </div>
   </div>
 
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">Factory</p>
@@ -59,8 +59,8 @@
     </div>
   </div>
 
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">BU</p>
@@ -71,8 +71,8 @@
     </div>
   </div>
 
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">Department</p>
@@ -83,8 +83,8 @@
     </div>
   </div>
 
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">Start Date</p>
@@ -95,8 +95,8 @@
     </div>
   </div>
 
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">End Date</p>
@@ -107,8 +107,8 @@
     </div>
   </div>
 
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">Lot Status</p>
@@ -119,8 +119,8 @@
     </div>
   </div>
 
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">Total Lot Turns</p>
@@ -131,8 +131,8 @@
     </div>
   </div>
 
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">3400 EUV in Hr's</p>
@@ -143,8 +143,8 @@
     </div>
   </div>
 
-  <div class="col-md-3">
-    <div class="card radius-10">
+  <div class="col-md-3 mb-3">
+    <div class="card radius-10 h-100 " >
       <div class="card-body d-flex justify-content-between align-items-center">
         <div>
           <p class="mb-0 text-secondary">Shipment</p>
@@ -156,7 +156,7 @@
   </div>
 
   <div class="col-md-12">
-    <div class="card radius-10">
+    <div class="card radius-10 h-100 " >
       <div class="card-body">
         <h6 class="text-center text-secondary mb-4">Project Support Time in Hr's</h6>
         <div class="row text-center justify-content-around">
